# grow

./: .gitignore  README.md
client/: components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
client/src/components/: breadcrumb-location.tsx  nav.tsx  responsive-dialog-wrapper.tsx  user.tsx  vineyard-actions.tsx  vineyard-add-informations.tsx  vineyard-add-varieties.tsx  vineyard-add.tsx  vineyard-card.tsx  vineyard-variety-tooltip.tsx  vineyards-controls.tsx  vineyards-grid.tsx  vineyards-table.tsx
client/src/hooks/: use-add-vineyard.ts  use-new-vineyard-cut-form.ts  use-new-vineyard-cut.ts  use-new-vineyard-form.ts  use-new-vineyard-planting-form.ts  use-new-vineyard-planting.ts  use-new-vineyard-trim-form.ts  use-new-vineyard-trim.ts  use-new-vineyard.ts  use-shared-action.tsx  use-signin.ts  use-signout.ts  use-user.ts  use-vineyard-action.tsx  use-vineyard-add-form.tsx  use-vineyard-add.ts  use-vineyard-cut-add-form.ts  use-vineyard-cut-add-form.tsx  use-vineyard-cut-add.ts  use-vineyard-form.tsx  use-vineyard-trim-add-form.tsx  use-vineyard-trim-add.ts  use-vineyards.ts  useUser.ts
client/src/routes/: __root.tsx
client/src/types/: shared.ts  vineyard.ts
client/src/utils/: shared.tsx  vineyard.tsx
server/: Cargo.toml  Makefile  diesel.toml  go.mod  go.sum  logs.txt  sqlc.yaml
server/api/: Cargo.toml
server/api/src/: auth_handler.rs  vineyard_handler.rs
server/api/src/handler/: auth_handler.rs  cors_handler.rs  error_handler.rs  mod.rs  user_handler.rs  vineyard_handler.rs
server/application/: Cargo.toml
server/application/src/: lib.rs
server/application/src/auth/: create.rs  read.rs
server/application/src/user/: read.rs
server/application/src/vineyard/: create.rs  read.rs
server/cmd/grow/: main.go
server/domain/: Cargo.toml
server/domain/src/: models.rs  schema.rs
server/infrastructure/: Cargo.toml
server/infrastructure/src/: lib.rs
server/internal/api/: api.go
server/internal/config/: config.go
server/internal/dao/: user_dao.go
server/internal/db/: connection.go  db.go  (+1 more)
server/shared/: Cargo.toml
server/shared/src/: jwt.rs  lib.rs  response_models.rs
server/shared/src/dto/: auth_dto.rs  mod.rs  shared_dto.rs  vineyard_dto.rs
(+117 files in other folders)
