[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
application = { path = "../application" }
shared = { path = "../shared" }

rocket = { version = "0.5.1", features = ["json", "secrets"] }
diesel = { version = "2.2.6", features = ["postgres", "r2d2"] }
serde = { version = "1.0.215", features = ["derive"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde_json = "1.0.133"
dotenvy = "0.15"
log = "0.4.22"
