[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono"] }
serde_json = "1.0.133"
bcrypt = "0.16.0"
