[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }

rocket = { version = "0.5.1", features = ["json"] }
rocket_contrib = "0.4.6"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.88"
chrono = "0.4.23"
jsonwebtoken = "8.1.1"
dotenvy = "0.15"
